static/css/style.css
/* Variables definition */

body {
  --body_font-family: "YakuHanJPs","Segoe UI","-apple-system","BlinkMacSystemFont","Roboto", "Hiragino Sans","Noto Sans CJK JP", sans-serif;
  --pre_font-family: monospace;
}

.site_container {
  --container_box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
}

.site_header_container {
  --header_background-color: #404040;
  --site-logo_color: #FFFFFF;
  --site-tagline_color: #A0A0A0;
  --site-navigation_color: #FFFFFF;
}

.site_footer_container {
  --footer_background-color: #404040;
  --footer-text_color: #D0D0D0;
  --footer-link_color: #FFFFFF;
}

.site_main_container {
  --main_background-color: #F0F0F0;

  --a_color: #4488FF;
  --a_color_selected: #FF8844;

  --taxonomy-button_color: #000000;
  --taxonomy-button_background-color: #FFFFFF;
  --taxonomy-button_color_selected: #000000;
  --taxonomy-button_background-color_selected: #E8E8E8;

  --card_background-color: #FFFFFF;

  --page-list-timestamp_color: #606060;
  --page-list-title_color: #000000;
  --pagination-button_box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
  --pagination-button_background-color: #F0F0F0;
  --pagination-button_color: #000000;
  --pagination-button_background-color_active: #404040;
  --pagination-button_color_active: #FFFFFF;
  --pagination-button_background-color_disabled: #F0F0F0;
  --pagination-button_color_disabled: #A0A0A0;

}

.single_container {
  --toc_color: #606060;
  --toc_background-color_selected: #F0F0F0;
  --toc_color_selected: #000000;

  --code_background-color: #F0F0F0;
  --blockquote_color: #404040;
  --th_background-color: #F0F0F0;
  --pre_color: #FFFFFF;
  --pre_background-color: #202020;
  --summary_background-color_selected: #F0F0F0;
  --figcaption_color: #808080;
}


/* HTML tag*/

html {
  scroll-behavior: smooth;
}

body {
  overflow-y: scroll;
  margin: 0px;
  font-family: var(--body_font-family);
}

a {
  word-break: break-all;
  text-decoration: none;
  color: var(--a_color);
}

a:link {
}

a:visited {
}

a:hover {
  text-decoration: underline;
  color: var(--a_color_selected);
}

a:active {
  text-decoration: underline;
  color: var(--a_color_selected);
}

/* for Article */

h1 {
  margin-block-start: 0.4em;
  margin-block-end: 0.4em;
  font-size: 1.6em;
  line-height: 1.5em;
}

h2 {
  margin-block-start: 1.6em;
  margin-block-end: 1em;
  padding-inline-start: 12px;
  border-bottom: #808080 solid 2px;
  border-left: #808080 solid 6px;
  font-size: 1.4em;
  line-height:1.5em;
}

h3 {
  margin-block-start: 1.6em;
  margin-block-end: 1em;
  padding-inline-start: 12px;
  border-bottom: #808080 solid 1px;
  font-size: 1.2em;
  line-height:1.5em;
}

h4 {
  margin-block-start: 1.2em;
  margin-block-end: 1em;
  font-size: 1em;
  line-height:1.5em;
}

h5 {
  margin-block-start: 1em;
  margin-block-end: 1em;
  font-size: 0.8em;
  line-height:1.5em;
}

h6 {
  margin-block-start: 1em;
  margin-block-end: 1em;
  font-size: 0.6em;
  line-height:1.5em;
}

code {
  padding: 0px 4px;
  border: solid 1px #C0C0C0;
  border-radius: 4px;
  background-color: var(--code_background-color);
  font-family: inherit;
  font-size: 0.9em;
}

blockquote {
  margin-inline-start: 1em;
  margin-inline-end: 1em;
  padding-inline-start: 1em;
  padding-inline-end: 1em;
  border-left: solid 4px #A0A0A0;
  color: var(--blockquote_color);
}

table {
  display: block;
  overflow-x: auto;
  margin: 1em;
  padding: 0.5em;
  border-collapse: collapse;
}

th, td {
  padding: 2px 8px;
  border: solid 1px #C0C0C0;
}

th {
  background-color: var(--th_background-color);
}

pre {
  overflow-x: auto;
  margin-inline-start: 0.5em;
  margin-inline-end: 0.5em;
  padding: 1em;
  border-radius: 4px;
  line-height: 1.2em;
  font-family: var(--pre_font-family);
  font-size: 1.1em;

  color: var(--pre_color);
  background-color: var(--pre_background-color);
}

pre > code {
  padding: unset;
  border: unset;
  border-radius: unset;
  font-size: unset;
  background-color: unset;
}

ul {
}

ol {
}

li:has( input )::marker {
  content: none;
}

hr {
}

img {
  max-width: 100%;
}

details {
  margin: 0.5em;
  padding: 4px;
  border-radius: 4px;
  border: solid 1px #C0C0C0;
}

summary {
  padding-inline-start: 8px;
  border-radius: 4px;
  cursor: pointer;
}

details[open] > summary {
  background-color: var(--summary_background-color_selected);
}

summary:hover {
  background-color: var(--summary_background-color_selected);
}

figure {
  margin: 1em;
}

figcaption {
  font-size: 0.9em;
  color: var(--figcaption_color);
}


/* Global */

html, body, .site_container {
  height: 100%;
}

.site_container {
  display: flex;
  flex-direction: column;
}

.site_header_container {
  flex: 0 0 auto;
  z-index: 1;
}

.site_main_container {
  flex: 1 1 auto;
  z-index: 0;
  background-color: var(--main_background-color);
}

.site_footer_container {
  flex: 0 0 auto;
  z-index: 1;
}

.content_area {
  max-width: 1600px;
  margin-left: auto;
  margin-right: auto;
}


/* Component */

.card {
  max-width: 1200px;
  margin: 12px 12px;
  padding: 16px 16px;
  border-radius: 4px;
  box-shadow: var(--container_box-shadow);
  background-color: var(--card_background-color);
}

.taxonomy_list {
  padding-inline-start: 0px;
  list-style: none;
  font-size: 0.9em;
  margin-block-start: 0px;
  margin-block-end: 0px;
}

.taxonomy_list_item {
  display: inline-block;
}

.taxonomy_button {
  padding: 0px 8px;
  border: solid 1px #C0C0C0;
  border-radius: 6px;
  background-color: var(--taxonomy-button_background-color);
  color: var(--taxonomy-button_color);
  line-height: 1.8em;
}

.taxonomy_button:hover {
  background-color: var(--taxonomy-button_background-color_selected);
  color: var(--taxonomy-button_color_selected);
}

.has_icon:before {
  display: inline-block;
  content: "";
  width: 1em;
  height: 1em;
  margin-right: 0.5em;
}

.icon_calendar::before {
  background-image: url("/images/icon_calendar.svg");
}

.icon_reload::before {
  background-image: url("/images/icon_reload.svg");
}
/* ... */

